@@ -4,6 +4,8 @@
 
  Changes between 1.0.2g and 1.1.0  [xx XXX xxxx]
 
+  *) Triple-DES ciphers have been moved from HIGH to MEDIUM.
+
   *) To enable users to have their own config files and build file templates,
      Configure looks in the directory indicated by the environment variable
      OPENSSL_LOCAL_CONFIG_DIR as well as the in-source Configurations/
